infrastructure/kubernetes/core/database/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-db-client
spec:
  type: ClusterIP
  selector:
    app: core-db
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
