infrastructure/kubernetes/core/database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-db
spec:
  clusterIP: None
  selector:
    app: core-db
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
